0.633
 Fix: Fixed VisualStudio designer being unable to load ConfigGUI.MainForm.
 Fix: Fixed /ZMark being spammy (thanks ruggedbear).
 Fix: Binding "air" block to something now works as expected (deleted blocks are replaced with the binding) (thanks Hellenion).
 Fix: Added missing tooltips to "Data Backup" checkbox in ConfigGUI (thanks PhoneBook_).
 Change: "/Reload Autorank" now triggers a re-scan of the whole PlayerDB.

0.632
 Feature: Added standalone HeartbeatSaver utility, a heartbeat-sending daemon.
 Feature: Added a way to specify scale/turbulence/seed for cloudy brush.
 Feature: Renamed "IRC" LogType to "IRCStatus", and added "IRCChat" LogType. Check your configs.
 Fix: Fixed the updater. You'll have to update from version 0.631 manually (thanks nope__avi).
 Fix: Fixed a bug related to multiple players trying to join an almost-full server at the same time.
 Fix: Fixed a rare InvalidOperationException crash in ConfigGUI.
 Fix: Fixed reversed order in /BlockInfo (thanks recon_).
 Fix: Fixed a few formatting errors in feedback messages.
 Fix: Fixed a rare disconnect related to a spectator trying to follow a spectatee to a full world.
 Fix: Fixed /Hide not showing a fake disconnect message when needed.
 Fix: Fixed /WRename prompting for file overwrite when changing capitalization in a world name.
 Fix: Fixed UndoArea/UndoAreaNot and UndoPlayer/UndoPlayerNot messages occasionally getting mixed up.
 Fix: Fixed players being unable to join the server if access restrictions prevent them from joining the rank-specific main world.
 Fix: /WRemove now correctly handles removing rank-main worlds.
 Fix: Fixed a case where newlines in PlayerInfo or IPBanInfo fields would cause record corruption.
 Fix: Fixed reversed messages in /DoNotMark (thanks Hellenion).
 Fix: Fixed ServerCLI sometimes staying open, waiting on console input, when it's supposed to shut down or restart.
 Change: Sped up "cloudy" brush when working with large draw commands.