@@ -12,7 +12,6 @@ namespace fCraft.UpdateBuilder {
             "ServerGUI.exe",
             "MapConverter.exe",
             "MapRenderer.exe",
-            "HeartbeatSaver.exe",
             "../../CHANGELOG.txt",
             "../../README.txt"
         };
